<?xml version="1.0" encoding="utf-8"?>
<fr.android.androidexercises.view.view.BookItemView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="100dp"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="horizontal"
    android:padding="10dp">

    <ImageView
        android:id="@+id/coverImageView"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/ic_launcher"
        android:contentDescription="@string/img_content_description" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textStyle="bold"
            tools:text="@string/default_name"/>

        <TextView
            android:id="@+id/priceTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:layout_below="@id/titleTextView"
            android:textColor="@color/colorPrimary"
            tools:text="@string/default_price"/>

    </RelativeLayout>

</fr.android.androidexercises.view.view.BookItemView>