<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbars="vertical"
        android:padding="@dimen/default_padding"
        tools:context=".view.activity.LibraryActivity">

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/default_margin_top"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:text="@string/default_name"/>

        <RelativeLayout
            android:id="@+id/priceAndImageLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/titleTextView"
            android:layout_marginTop="@dimen/default_margin_top">

            <ImageView
                android:id="@+id/coverImageView"
                android:src="@drawable/ic_launcher"
                android:layout_width="@dimen/book_image_width"
                android:layout_height="@dimen/book_image_height"
                android:layout_marginStart="60dp"
                android:contentDescription="@string/img_content_description" />

            <TextView
                android:id="@+id/priceTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin_top"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="80dp"
                android:textStyle="bold"
                android:textColor="@color/colorPrimary"
                android:textSize="@dimen/book_title_text_size"
                tools:text="@string/default_price"
                tools:ignore="RelativeOverlap" />
        </RelativeLayout>


        <TextView
            android:id="@+id/synopsisTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/priceAndImageLayout"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:textStyle="italic"
            tools:text="@string/default_synopsis"/>

        <TextView
            android:id="@+id/isbnTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/synopsisTextView"
            android:layout_marginTop="@dimen/default_margin_top"
            android:layout_marginEnd="2dp"
            android:layout_alignParentEnd="true"
            tools:text="@string/default_isbn"
            android:textStyle="italic"/>

    </RelativeLayout>

</ScrollView>
